File: plugins/nexus-repository-apt/src/test/java/org/sonatype/nexus/repository/apt/datastore/AptVirtualThreadTest.java